--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </canvas>
     
     <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
-    <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v2"></script>
+    <script name="shader" data-src="vertex2.glsl" data-type="vertex" data-version="v2"></script>
     <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
     <script type="text/javascript" src="libs/gl-matrix-min.js"></script>
     <script type="text/javascript" src="libs/signals.js"></script>
